# lodestone

./: README.md
core/: Cargo.toml
core/src/: lib.rs  port_manager.rs
core/src/docker_bridge/: mod.rs
core/src/handlers/: docker.rs  gateway.rs  instance_setup_configs.rs  mod.rs  mods.rs  playitgg.rs
core/src/implementations/minecraft/: mod.rs  purpur.rs  quilt.rs  server.rs  util.rs  versions.rs
core/src/mods/: curseforge.rs  manifest.rs  mod.rs  modrinth.rs  provider.rs  types.rs
core/src/playitgg/: mod.rs
dashboard/: package.json
dashboard/src/bindings/impl/: FlavourStringToMinecraftFlavour.ts
dashboard/src/components/Instance/Mods/: ModsInstalled.tsx  ModsSearch.tsx  ModsTab.tsx
dashboard/src/data/: GameTypeMappings.tsx
dashboard/src/pages/InstanceTabs/: InstanceTabs.tsx
dashboard/src/pages/docker/: index.tsx
dashboard/src/pages/events/: index.tsx
dashboard/src/pages/settings/: CoreSettings.tsx
dashboard/src/utils/: apis.ts
